Change log for zeit.web
=======================

POSTDEPLOY
----------


3.144 (unreleased)
------------------

- Nothing changed yet.


3.143 (2018-04-17)
------------------

- ZON-4532: Remove zeit.intrafind and the zeit.retresco.tms featuretoggle

- SSL-215: Rewrite certain URLs in RAW


3.142 (2018-04-16)
------------------

- ZON-4508: Force images on zplus-abo teaser in mobile view

- ZON-4580: Remove additional liveblog header layout

- ZON-4582: Implement exclusion for article body ads

- BUG-891: Fix print button on advertorials

- BUG-893: Clear floating advertisements before fullwidth block content

- MAINT: Remove obsolete route config for `/health_check`

- MAINT: Move 'transform_to_secure_links_for' setting to web-settings


3.141 (2018-04-12)
------------------

- SSL-206: Implement protocol neutrality on configured hosts

- MAINT: Replace `togglepatch` fixture by built-in override functionality from 8fe69a5


3.140 (2018-04-12)
------------------

- ZON-4583: Ligatus Enhancements

- TMS-203: Migrate lineage to elasticsearch (toggle `elasticsearch_lineage`)

- SSL-201: Use correct community host setting to create links to userprofile

- SSL-198: Switch to ssl asset host for css loading


3.139 (2018-04-09)
------------------

- ZON-4558: Make ZMO article pagination more core-ish

- ZON-4476: Add liveblog property to collapse preceding content

- ZON-4567: Suppress retresco body if article has keywords on a configured blacklist

- SSL-165: Remove "send to XSLT" blacklist

- MAINT: Ligatus can be toggled for each vertical


3.138 (2018-04-05)
------------------

- ZON-4550: Fix ligatus positioning

- ZON-4507: Polish news article transparency notice

- SSL-196: Transform navigation links to https if configured

- FIX: Change brandeins topiclink according as requested


3.137.1 (2018-04-04)
--------------------

- BUG-889: Change wording of dpa/afp infotext


3.137 (2018-04-04)
------------------
