@@ -8,7 +8,8 @@ POSTDEPLOY
 3.144 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- FIX: Ensure ensure_division is called before we interact with the
+  article body, for all possible code paths
 
 
 3.143 (2018-04-17)
